[gd_scene load_steps=8 format=3 uid="uid://c8wl208mkd5h8"]

[ext_resource type="PackedScene" uid="uid://b433p4cjgtoxq" path="res://core/base_biscuit.tscn" id="1_dx807"]
[ext_resource type="Script" uid="uid://bxjlr8gtasvlf" path="res://biscuit_types/heart_biscuit.gd" id="2_e3cud"]
[ext_resource type="PackedScene" uid="uid://dy8x6l1dvj4la" path="res://assets/heart_biscuit.glb" id="2_q388c"]
[ext_resource type="PackedScene" uid="uid://gy262lerkoho" path="res://assets/heart_biscuit_evil.glb" id="3_e3cud"]

[sub_resource type="Animation" id="Animation_q388c"]
resource_name = "throb"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.05, 1.05, 1.05), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e3cud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnkk8"]
_data = {
&"RESET": SubResource("Animation_e3cud"),
&"throb": SubResource("Animation_q388c")
}

[node name="HeartBiscuit" instance=ExtResource("1_dx807")]
script = ExtResource("2_e3cud")
is_evil = false

[node name="Model" type="Node3D" parent="." index="1"]
transform = Transform3D(-4.37116e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="GoodModel" parent="Model" index="0" instance=ExtResource("2_q388c")]
unique_name_in_owner = true
transform = Transform3D(0.333, 0, 6.1519e-14, 0, 0.333, 0, -6.1519e-14, 0, 0.333, 0, 0, 0)

[node name="EvilModel" parent="Model" index="1" instance=ExtResource("3_e3cud")]
unique_name_in_owner = true
transform = Transform3D(0.333, 0, 6.1519e-14, 0, 0.333, 0, -6.1519e-14, 0, 0.333, 0, 0, 0)

[node name="Animation" type="AnimationPlayer" parent="." index="2"]
unique_name_in_owner = true
root_node = NodePath("../Model/EvilModel")
libraries = {
&"": SubResource("AnimationLibrary_hnkk8")
}
